--- a/app/globals.css
+++ b/app/globals.css
@@ -11,13 +11,13 @@
   --card-foreground: oklch(0.35 0 0);
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.35 0 0);
-  --primary: oklch(0.65 0.15 45); /* Orange #ea580c */
+  --primary: oklch(62.793% 0.25768 29.223); /* Orange #ea580c */
   --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.7 0.18 35); /* Brighter orange #f97316 */
+  --secondary: oklch(65.984% 0.21169 25.099); /* Brighter orange #f97316 */
   --secondary-foreground: oklch(1 0 0);
   --muted: oklch(0.98 0.03 85); /* Very light cream #fefce8 */
   --muted-foreground: oklch(0.35 0 0);
-  --accent: oklch(0.7 0.18 35); /* Accent orange #f97316 */
+  --accent: oklch(65.984% 0.21169 25.099); /* Accent orange #f97316 */
   --accent-foreground: oklch(1 0 0);
   --destructive: oklch(0.55 0.2 25); /* Error red #e3342f */
   --destructive-foreground: oklch(1 0 0);
@@ -38,7 +38,7 @@
   --sidebar-accent-foreground: oklch(1 0 0);
   --sidebar-border: oklch(0.85 0 0);
   --sidebar-ring: oklch(0.65 0.15 45 / 0.5);
-  --main:  oklch(92.686% 0.12022 101.785 / 0.5);
+  /* --main:  oklch(92.686% 0.12022 101.785 / 0.5); */
 }
 
 .dark {
